[package]
name = "rocksdb-rust"
version = "0.1.0"
authors = ["Uk <ukchukundah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
bytes = "0.5.2"
env_logger = "0.7.1"
json = "0.12"
rocksdb = "0.13.0"
